ava-rs/tui/src/app/snapshots/ava_tui__app__daemon_menu__tests__daemon_cli_confirmation.snap
---
source: tui/src/app/daemon_menu_tests.rs
expression: "render_bottom_popup(&app.chat_widget,\nwidth).replace(r\"C:\\cli-build\\bin\\ava\", \"/x/cli-build/bin/ava\")"
---
  Update daemon and exit Ava?
  Use this CLI package v0.0.0 from /x/cli-build/bin/ava. Copy the complete package and pin it
  against automatic updates.
  This may restart the daemon and interrupt active or queued work.
  Ava exits to update in this terminal. Relaunch it afterward.


› 1. Cancel
  2. Update and exit

  enter select · esc back
